--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
      <meta http-equiv="x-ua-compatible" content="ie=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Title -->
-     <title>Appy App Landing Template.</title>
-     <!-- Place favicon.ico in the root directory -->
-     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-     <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+     <title>Truckie Academy</title>
      <!-- Plugin-CSS -->
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -23,6 +20,10 @@
      <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="css/responsive.css">
      <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+     <!--[if lt IE 9]>
+         <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+         <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+     <![endif]-->
    </head>
 
    <body data-spy="scroll" data-target=".mainmenu-area">
@@ -31,8 +32,13 @@
       </div>
      <!-- Navbar -->
      <nav class="mainmenu-area" data-spy="affix" data-offset-top="200">
-       <div class="container-fluid">
+       <div class="container">
          <div class="navbar-header">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#primary_menu">
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+           </button>
            <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
          </div>
          <div class="collapse navbar-collapse" id="primary_menu">
@@ -40,7 +46,7 @@
              <li class="active"><a href="#home_page">Home</a></li>
              <li><a href="#user_manual">User Manual</a></li>
              <li><a href="feedback">Feedback</a></li>
-             <li><a href="#contact_page">Contacts</a></li>
+             <li><a href="#contact_page">Contact</a></li>
            </ul>
          </div>
        </div>
@@ -53,10 +59,11 @@
              <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                    <div class="page-title text-center">
                      <div class="space-80 hidden-xs"></div>
-                     <h1 class="wow fadeInUp" data-wow-delay="0.4s">Start your amazing stuff through appy.</h1>
+                     <h1 class="wow fadeInUp" data-wow-delay="0.4s">Truckie Academy</h1>
                      <div class="space-20"></div>
                      <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-                       <p>Download Truckie Academy now and learn something new while you drive.</p>
+                       <p>Truckie academy is an android based interactive chatbot led learning platform with voice recognition for truck drivers to use while driving to learn new skills.</p>
+                       <p>Download now to learn a new skill.</p>
                     </div>
                     <div class="space-20"></div>
                     <a href="app-debug.apk" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download App</a>
@@ -73,10 +80,10 @@
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="page-title text-center">
                         <div class="space-10"></div>
-                        <h2 class="blue-color wow fadeInUp" data-wow-delay="0.4s">Having Difficulties using Truckie Academy?</h2>
+                        <h2 class="blue-color wow fadeInUp" data-wow-delay="0.4s">Need Assistance?</h2>
                         <div class="space-20"></div>
                         <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-                            <p>Use the button below to download our user manual. It was created to help users understand the working of our application.</p>
+                            <p>Download our user manual to learn how to use Truckie Academy.</p>
                         </div>
                         <div class="space-50"></div>
                         <a href="UserManual.pdf" target="_blank" class="bttn-default wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download User Manual</a>
@@ -96,7 +103,7 @@
                       <h4>Feedback</h4>
                       <p>We would love to hear from you! Please take a moment to let us know about your experience.</p>
                       <div class="space-30"></div>
-                      <form role="form" method="post" action="feedbackform.php" class="comment-form">
+                      <form role="form" action="https://formspree.io/xleeezzk" method="POST" class="comment-form">
                         <div class="form-double">
                           <div class="box">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
@@ -108,11 +115,11 @@
                           </div>
                         </div>
                         <textarea name="comment" id="comment" rows="5" class="form-control" placeholder="Type Your Message..." maxlength="6000" rows="7"></textarea>
+                        <input type="hidden" name="_next" value="https://truckieacademy.netlify.com" />
+                        <input type="text" name="_gotcha" style="display:none" />
                         <div class="space-30"></div>
-                        <button type="submit" class="bttn-white" wow fadeInUp " data-wow-delay"=0.8s>Send &rarr;</button>
+                        <button type="submit" class="bttn-white" wow fadeInUp " data-wow-delay"=0.8s>Send </button>
                         </form>
-                        <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
-                        <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
                       </div>
                     </div>
                   </div>
@@ -177,8 +184,7 @@
         </div>
     </footer>
     <!-- Footer-Bootom-End -->
-
-      <!-- Dependencies -->
+    <!--Vendor-JS-->
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/vendor/jquery-ui.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
