--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            <ul class="nav navbar-nav mainmenu">
              <li class="active"><a href="#home_page">Home</a></li>
              <li><a href="#user_manual">User Manual</a></li>
-             <li><a href="feedback">Feedback</a></li>
+             <li><a href="#feed_back">Feedback</a></li>
              <li><a href="#contact_page">Contact</a></li>
            </ul>
          </div>
@@ -66,7 +66,7 @@
                        <p>Download now to learn a new skill.</p>
                     </div>
                     <div class="space-20"></div>
-                    <a href="app-debug.apk" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download App</a>
+                    <a href="app-release.apk" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download App</a>
                   </div>
                 </div>
               </div>
@@ -86,7 +86,7 @@
                             <p>Download our user manual to learn how to use Truckie Academy.</p>
                         </div>
                         <div class="space-50"></div>
-                        <a href="UserManual.pdf" target="_blank" class="bttn-default wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download User Manual</a>
+                        <a href="TruckieAcademyUserGuide.pdf" target="_blank" class="bttn-default wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download User Manual</a>
                     </div>
                 </div>
             </div>
@@ -94,12 +94,11 @@
     </section>
 
     <!-- Feedback -->
-    <section class="usermanual-area section-padding" id="feedback">
+    <section class="feedback-area section-padding" id="feed_back">
       <div class="container-fluid">
           <div class="row">
               <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                   <div class="page-title text-center">
-                    <div class="comment-respond">
                       <h4>Feedback</h4>
                       <p>We would love to hear from you! Please take a moment to let us know about your experience.</p>
                       <div class="space-30"></div>
@@ -145,7 +144,7 @@
                                 <div class="box-icon">
                                     <span class="lnr lnr-map-marker"></span>
                                 </div>
-                                <p>8-54 Paya Lebar Square <br /> 60 Paya Lebar Roa SG, Singapore</p>
+                                <p>Sydney,Ausralia</p>
                             </div>
                             <div class="space-30 hidden visible-xs"></div>
                         </div>
@@ -154,7 +153,7 @@
                                 <div class="box-icon">
                                     <span class="lnr lnr-phone-handset"></span>
                                 </div>
-                                <p>+65 93901336 <br /> +65 93901337</p>
+                                <p>+61 123456789</p>
                             </div>
                             <div class="space-30 hidden visible-xs"></div>
                         </div>
@@ -163,8 +162,7 @@
                                 <div class="box-icon">
                                     <span class="lnr lnr-envelope"></span>
                                 </div>
-                                <p>yourmail@gmail.com <br /> anothermai@hotmail.com
-                                </p>
+                                <p>some email</p>
                             </div>
                         </div>
                     </div>
