--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                      <div class="space-20"></div>
                      <div class="desc wow fadeInUp" data-wow-delay="0.6s">
                        <p>Truckie academy is an android based interactive chatbot led learning platform with voice recognition for truck drivers to use while driving to learn new skills.</p>
-                       <p>Download now to learn a new skill.</p>
                     </div>
                     <div class="space-20"></div>
                     <a href="app-release.apk" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Download App</a>
@@ -99,7 +98,7 @@
           <div class="row">
               <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                   <div class="page-title text-center">
-                      <h4>Feedback</h4>
+                      <h2>Feedback</h2>
                       <p>We would love to hear from you! Please take a moment to let us know about your experience.</p>
                       <div class="space-30"></div>
                       <form role="form" action="https://formspree.io/xleeezzk" method="POST" class="comment-form">
@@ -114,7 +113,6 @@
                           </div>
                         </div>
                         <textarea name="comment" id="comment" rows="5" class="form-control" placeholder="Type Your Message..." maxlength="6000" rows="7"></textarea>
-                        <input type="hidden" name="_next" value="https://truckieacademy.netlify.com" />
                         <input type="text" name="_gotcha" style="display:none" />
                         <div class="space-30"></div>
                         <button type="submit" class="bttn-white" wow fadeInUp " data-wow-delay"=0.8s>Send </button>
@@ -133,7 +131,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="page-title text-center">
-                                <h3 class="dark-color">Find Us By Bellow Details</h3>
+                                <h2 class="dark-color">Contact Us!</h2>
                                 <div class="space-60"></div>
                             </div>
                         </div>
